[package]
name = "homie-input"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
log = "0.4.17"
rumqttc = "0.20.0"
thiserror = "1.0.40"
flume = "0.10.14"
futures = "0.3.27"
homie-controller = "0.8.0"
homie-device = "0.8.0"
pretty_env_logger = "0.4.0"
rumqttd = "0.13.0"
rumqttlog = "0.9.0"
tokio = { version = "1.27.0", features = ["macros", "rt", "rt-multi-thread", "time"] }
telegraf = "0.6.0"
clap = { version = "4.2.5", features = ["derive"] }
envy = "0.4"
serde = { version = "1.0", features = ["derive"] }
influxdb_rs = "0.2.1"
url = "2.3.1"
chrono = "0.4.24"
precision = "0.1.15"
